<resources>
    <string name="app_name">WalkWalkRevolution</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_tab">Home</string>
    <string name="routes_tab">Routes</string>
    <string name="team_tab">Team</string>
    <string name="mock_tab">Mock</string>

    <string name="general_placeholder">{{Placeholder}}</string>

    <string name="step_placeholder">5000</string>
    <string name="dist_placeholder">3.5 mi</string>
...
    <string name="invite_fragment_title">Invite</string>
    <string name="invite_first_name_error">Please enter a first name</string>
    <string name="invite_last_name_error">Please enter a last name</string>
    <string name="invite_email_error">Please enter a GMail</string>

    <string name="invites_string">Invites</string>
    <string name="refresh_menu_string">Refresh</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>

    <string name="propose_button">Propose Walk</string>

    <string name="scheduled_time_text">Scheduled Time:</string>
    <string name="proposed_time_text">Proposed Time:</string>

    <string name="withdraw_button_text">Withdraw</string>
    <string name="schedule_button_text">Schedule</string>

</resources>

